# flask-demo

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt
flask_demo/: config.py
flask_demo/api/: video_api.py
flask_demo/api/handler/: handler.py
flask_demo/api/req/: video_create_req.py  video_update_req.py
flask_demo/api/resp/: video_resp.py
flask_demo/config/: config.py  gunicorn_config.py
flask_demo/helper/: exception.py
flask_demo/orm/: database.py
flask_demo/orm/dao/: video_dao.py
flask_demo/orm/models/: video.py
flask_demo/service/: video_service.py
flask_demo/service/dto/: video_dto.py
scripts/: create_table.py
