[tool.poetry]
name = "flask-demo"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.3"
ipython = "^8.26.0"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
flask-login = "^0.6.3"
flask-restful = "^0.3.10"
pydantic = "^2.8.2"
sqlalchemy = "^2.0.31"
flask-cors = "^4.0.1"
flask-restx = "^1.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
